--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.16
   pin_code_fields: ^8.0.1
+  http: ^1.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,8 +60,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-assets:
-      - assets/images/
+  assets:
+    - assets/images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
